--- a/META.yml
+++ b/META.yml
@@ -29,6 +29,11 @@ no_index:
     - t
     - examples
 
+resources:
+  license:    http://www.perlfoundation.org/artistic_license_2_0
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Games-Trackword
+  repository: http://github.com/barbie/games-trackword
+
 meta-spec:
    version:   1.4
    url:       http://module-build.sourceforge.net/META-spec-v1.4.html
